--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="开始录制"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:onClick="onStartRecord"
         />
 
